Where "NUMBER" is the bug number.

There are always more changes than listed here, these are just the
highlights. The full CVS log is available at www.xchat.org/cvslog/

----------------------------------------------------------------------
 2.6.x - DD/Oct/2006
----------------------------------------------------------------------

 - Updated translations (be, de, es, fi, it, ja, lt).
 - Removed "xchat-remote" and "dbus.so", it's now apart of the "xchat" binary
   (Claessens Xavier).
 - Python: Fixed "restricted mode" errors on win32 [1512076].
 - Special-cased BRASnet for nickserv.
 - Fixed using the /MENU args -p and -e at the same time.
 - Fixed /reconnect and auto-reconnect issue [1525383].
 - Plugin API:
   * Added fields: lag, queue to the "channels" list.
   * Added fields: sizehigh to the "dcc" list.
   * Added fields: networks to the "notify" list.
   * Handle gracefully plugins that try to execute commands with invalid
     UTF-8.
   * Added /GETFILE command, to open a file dialog.
   * Command hooks that start with a period ('.') will now be hidden from
     /HELP and /HELP -l.
 - Fixed: [1544960] quitting via tabs behaves bad on bncs.
 - Fixed: [1551620] --version flag needs display.
 - Fixed: [1539236] problem with the /url command (irc:// handling).
 - Fixed: [1568931] treeview problem: closing tabs by holding shift and
   clicking.
 - "Clear" button in Ban List window now has a 'Are you sure?' dialog
   for safety.
 - The notify list can now contain entries specific to only one or more
   IRC networks.
 - Userlist popup menu and buttons: added %e for 'current network name'.
 - Added option: 'Flash taskbar on any private messages'.
 - Added a new encoding choice: "IRC (Latin-1/UTF-8 hybrid)".
   How it works is described at: http://forum.xchat.org/viewtopic.php?t=xxxx
 - Perl (Lian Wan Situ)
  * Changed Xchat::print and Xchat::command to return false if they are
    called with either no arguments or undef