@@ -13,7 +13,7 @@ highlights. The full CVS log is available at www.xchat.org/cvslog/
  2.6.x - DD/Oct/2006
 ----------------------------------------------------------------------
 
- - Updated translations (be, de, es, fi, it, ja, lt).
+ - Updated translations (be, de, es, fi, it, ja, lt, sv).
  - Removed "xchat-remote" and "dbus.so", it's now apart of the "xchat" binary
    (Claessens Xavier).
  - Python: Fixed "restricted mode" errors on win32 [1512076].
@@ -41,12 +41,14 @@ highlights. The full CVS log is available at www.xchat.org/cvslog/
  - Userlist popup menu and buttons: added %e for 'current network name'.
  - Added option: 'Flash taskbar on any private messages'.
  - Added a new encoding choice: "IRC (Latin-1/UTF-8 hybrid)".
-   How it works is described at: http://forum.xchat.org/viewtopic.php?t=xxxx
+   How it works is described at: http://forum.xchat.org/viewtopic.php?t=3180
+ - Added /LastLog -r <regexp>.
  - Perl (Lian Wan Situ)
   * Changed Xchat::print and Xchat::command to return false if they are
     called with either no arguments or undef
   * Changed Xchat::user_info so that it works even if the nick parameter
     contains color codes
+
 
 ----------------------------------------------------------------------
  2.6.6 - 18/Jul/2006
